--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
         image: consumer-docker-environment:latest
         build:
             context: src
-            dockerfile: Docker.Environment.Consumer.API/Dockerfile
+            dockerfile: Docker.Environment.Consumer.API/Docker/Dockerfile
         container_name: consumer
         depends_on:
             - data-docker-environment
@@ -28,21 +28,28 @@ services:
             - my-network
         ports:
             - 8080:80
+            - 8081:443
         environment:
             - ASPNETCORE_ENVIRONMENT=Docker
+            - ASPNETCORE_URLS=https://*:443;http://*:80
+            - ASPNETCORE_Kestrel__Certificates__Default__Password=123
+            - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
         restart: unless-stopped
+        volumes:
+            - ~/.aspnet/https:/https:ro
     commands-docker-environment:
         image: commands-docker-environment:latest
         build:
             context: src
-            dockerfile: Docker.Environment.Commands.API/Dockerfile
+            dockerfile: Docker.Environment.Commands.API/Docker/Dockerfile
         container_name: commands
         depends_on:
             - data-docker-environment
         networks:
             - my-network
         ports:
-            - 8081:80
+            - 8082:80
+            - 8083:443
         environment:
             - ASPNETCORE_ENVIRONMENT=Docker
         restart: unless-stopped
