--- a/src/Docker.Environment.Consumer.API/Docker/Dockerfile
+++ b/src/Docker.Environment.Consumer.API/Docker/Dockerfile
@@ -1,8 +1,12 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
+EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+
+RUN dotnet dev-certs https
+
 WORKDIR /src
 
 COPY ["Docker.Environment.Consumer.API/*.csproj", "Docker.Environment.Consumer.API/"]
